# gensh

./: .env.example  .gitignore  MANIFEST.in  README.md  gensh.db  pyproject.toml  requirements.txt  setup.py
gensh/: __init__.py  _version.py  pipe_commands.py  processor.py
src/gensh/: __init__.py  _version.py  processor.py
src/gensh/templates/: analyze-logs.yml  architect.yml  book-summary.yml  code-python.yml  code-shell.yml  links-summary.yml  pm-news.yml  security-news.yml
templates/: analyze_logs.yml  architect.yml  architect_template.yml  book_summary_template.yml  code-python.yml  code-shell.yml  links_summary_template.yml
tests/: test_processor.py
tests/evals/: chain.gensh  pipeline.gensh
